Add cd [skip ci]

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,7 +5,7 @@ on:
     inputs:
       root_module_folder_relative_path:
         description: 'Root Module Folder Relative Path'
-        default: '.'
+        required: true
         type: string
 
 jobs:
