--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,10 +3,11 @@ name: Continuous Integration
 on:
   workflow_dispatch:
     inputs:
-      root_module_folder_relative_path:
-        description: 'Root Module Folder Relative Path'
+      terraform_folder:
+        description: 'Terraform configuration folder'
         required: true
         type: string
+        default: 'none'
       environment_name:
         description: 'Environment that will be deployed'
         required: true
@@ -23,6 +24,17 @@ jobs:
       self-hosted
     environment: ${{ inputs.environment_name }}
     steps:
+      - name: Check Path
+        run: |
+          if [ -d "./${{ github.event.inputs.terraform_folder }}" ]; then
+            echo "Path /${{ github.event.inputs.terraform_folder }} exist"
+          else
+            echo "!!! Path /${{ github.event.inputs.terraform_folder }} does not exist !!!"
+            echo "Please use one of the following subfolders as path:"
+            ls -l
+            exit 1
+          fi
+
       - name: Checkout Code
         uses: actions/checkout@v4
 
@@ -31,24 +43,17 @@ jobs:
         with:
           terraform_wrapper: false
 
-      - name: Terraform Format Check
-        run: |
-          terraform \
-          -chdir=${{ inputs.root_module_folder_relative_path }} \
-          fmt \
-          -check
-
       - name: Terraform Init
         run: |
           terraform \
-          -chdir="$${{inputs.root_module_folder_relative_path}}" \
+          -chdir="$${{github.event.inputs.terraform_folder}}" \
           init \
           -backend=false
 
       - name: Terraform Validate
         run: |
           terraform \
-          -chdir="$${{inputs.root_module_folder_relative_path}}" \
+          -chdir="$${{github.event.inputs.terraform_folder}}" \
           validate
 
   # plan:
@@ -84,7 +89,7 @@ jobs:
   #     - name: Terraform Init
   #       run: |
   #         terraform \
-  #         -chdir="$${{inputs.root_module_folder_relative_path}}" \
+  #         -chdir="$${{inputs.terraform_folder}}" \
   #         init \
   #         -backend-config="resource_group_name=$${{vars.BACKEND_AZURE_RESOURCE_GROUP_NAME}}" \
   #         -backend-config="storage_account_name=$${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_NAME}}" \
@@ -95,7 +100,7 @@ jobs:
   #       id: plan
   #       run: |
   #         terraform \
-  #         -chdir="$${{inputs.root_module_folder_relative_path}}" \
+  #         -chdir="$${{inputs.terraform_folder}}" \
   #         plan \
   #         -input=false
 
