--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,11 @@ jobs:
       self-hosted
     environment: ${{ inputs.environment_name }}
     steps:
+      - name: Show content
+        run: |
+          pwd
+          ls -l
+
       - name: Check Path
         run: |
           if [ -d "./${{ github.event.inputs.terraform_folder }}" ]; then
@@ -42,19 +47,20 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_wrapper: false
+          terraform_version: "1.9.6"
 
-      - name: Terraform Init
-        run: |
-          terraform \
-          -chdir="$${{github.event.inputs.terraform_folder}}" \
-          init \
-          -backend=false
+      # - name: Terraform Init
+      #   run: |
+      #     terraform \
+      #     -chdir="$${{github.event.inputs.terraform_folder}}" \
+      #     init \
+      #     -backend=false
 
-      - name: Terraform Validate
-        run: |
-          terraform \
-          -chdir="$${{github.event.inputs.terraform_folder}}" \
-          validate
+      # - name: Terraform Validate
+      #   run: |
+      #     terraform \
+      #     -chdir="$${{github.event.inputs.terraform_folder}}" \
+      #     validate
 
   # plan:
   #   name: Validate Terraform Plan
