--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,20 +46,21 @@ jobs:
             exit 1
           fi
 
-      
-
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_wrapper: false
           terraform_version: "1.9.6"
 
-      # - name: Terraform Init
-      #   run: |
-      #     terraform \
-      #     -chdir="$${{github.event.inputs.terraform_folder}}" \
-      #     init \
-      #     -backend=false
+      - name: Terraform Init
+        run: |
+          terraform \
+          -chdir="$${{github.event.inputs.terraform_folder}}" \
+          init \
+          -backend-config="resource_group_name=$${{vars.BACKEND_AZURE_RESOURCE_GROUP_NAME}}" \
+          -backend-config="storage_account_name=$${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_NAME}}" \
+          -backend-config="container_name=${{ github.event.inputs.terraform_folder }}" \
+          -backend-config="key=terraform.tfstate"
 
       # - name: Terraform Validate
       #   run: |
