--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,10 +55,10 @@ jobs:
       - name: Terraform Init
         run: |
           terraform \
-          -chdir="$${{github.event.inputs.terraform_folder}}" \
+          -chdir="${{github.event.inputs.terraform_folder}}" \
           init \
-          -backend-config="resource_group_name=$${{vars.BACKEND_AZURE_RESOURCE_GROUP_NAME}}" \
-          -backend-config="storage_account_name=$${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_NAME}}" \
+          -backend-config="resource_group_name=${{vars.BACKEND_AZURE_RESOURCE_GROUP_NAME}}" \
+          -backend-config="storage_account_name=${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_NAME}}" \
           -backend-config="container_name=${{ github.event.inputs.terraform_folder }}" \
           -backend-config="key=terraform.tfstate"
 
