--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -78,8 +78,8 @@ jobs:
 
       - name: Terraform Init
         run: |
+          cd /${{ github.event.inputs.infrapath }}
           terraform \
-          -chdir="${{github.event.inputs.terraform_folder}}" \
           init \
           -backend-config="resource_group_name=${{vars.BACKEND_AZURE_RESOURCE_GROUP_NAME}}" \
           -backend-config="storage_account_name=${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_NAME}}" \
