--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,14 +23,14 @@ jobs:
     runs-on:
       self-hosted
     environment: ${{ inputs.environment_name }}
-    permissions:
-      # NOTE: When modifying the token subject claims and adding `environment`.
-      # If the `id-token` permission is granted at the workflow level
-      # and the workflow has at least one job that does not specify an environment
-      # then the action will fail with an internal error.
-      id-token: write
-      contents: read
-      pull-requests: write
+    # permissions:
+    #   # NOTE: When modifying the token subject claims and adding `environment`.
+    #   # If the `id-token` permission is granted at the workflow level
+    #   # and the workflow has at least one job that does not specify an environment
+    #   # then the action will fail with an internal error.
+    #   id-token: write
+    #   contents: read
+    #   pull-requests: write
     # env:
     #   ARM_CLIENT_ID: "${{ vars.AZURE_CLIENT_ID }}"
     #   ARM_SUBSCRIPTION_ID: "${{ vars.AZURE_SUBSCRIPTION_ID }}"
