--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,12 +31,12 @@ jobs:
     #   id-token: write
     #   contents: read
     #   pull-requests: write
-    # env:
-    #   ARM_CLIENT_ID: "${{ vars.AZURE_CLIENT_ID }}"
-    #   ARM_SUBSCRIPTION_ID: "${{ vars.AZURE_SUBSCRIPTION_ID }}"
-    #   ARM_TENANT_ID: "${{ vars.AZURE_TENANT_ID }}"
-    #   ARM_USE_AZUREAD: true
-    #   ARM_USE_OIDC: true
+    env:
+      ARM_CLIENT_ID: "${{ vars.AZURE_CLIENT_ID }}"
+      ARM_SUBSCRIPTION_ID: "${{ vars.AZURE_SUBSCRIPTION_ID }}"
+      ARM_TENANT_ID: "${{ vars.AZURE_TENANT_ID }}"
+      ARM_USE_AZUREAD: true
+      ARM_USE_OIDC: true
     
     steps:
       - name: Show current directory
