--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,7 +32,7 @@ jobs:
     #   contents: read
     #   pull-requests: write
     env:
-      ARM_CLIENT_ID: "${{ vars.AZURE_CLIENT_ID }}"
+      ARM_CLIENT_ID: "${{ vars.AZURE_CLIENT_ID_GH_LEARN }}"
       ARM_SUBSCRIPTION_ID: "${{ vars.AZURE_SUBSCRIPTION_ID }}"
       ARM_TENANT_ID: "${{ vars.AZURE_TENANT_ID }}"
       ARM_USE_AZUREAD: true
