--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,14 +23,14 @@ jobs:
     runs-on:
       self-hosted
     environment: ${{ inputs.environment_name }}
-    # permissions:
-    #   # NOTE: When modifying the token subject claims and adding `environment`.
-    #   # If the `id-token` permission is granted at the workflow level
-    #   # and the workflow has at least one job that does not specify an environment
-    #   # then the action will fail with an internal error.
-    #   id-token: write
-    #   contents: read
-    #   pull-requests: write
+    permissions:
+      # NOTE: When modifying the token subject claims and adding `environment`.
+      # If the `id-token` permission is granted at the workflow level
+      # and the workflow has at least one job that does not specify an environment
+      # then the action will fail with an internal error.
+      id-token: write
+      contents: read
+      pull-requests: write
     env:
       ARM_CLIENT_ID: "${{ vars.AZURE_CLIENT_ID_GH_LEARN }}"
       ARM_SUBSCRIPTION_ID: "${{ vars.AZURE_SUBSCRIPTION_ID }}"
@@ -61,14 +61,19 @@ jobs:
             exit 1
           fi
 
-      - name: Az CLI Version
-        run: |
-          az --version
-
-      - name: Context
-        run: |
-          az login --identity --client-id ${{ vars.AZURE_CLIENT_ID }}
-          az account show
+      - name: Azure login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID_GH_LEARN }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      
+      - name: Azure CLI script
+        uses: azure/cli@v2
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az account show
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
