--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,13 +68,9 @@ jobs:
           tenant-id: ${{ vars.AZURE_TENANT_ID }}
           subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
       
-      - name: Azure CLI script
-        uses: azure/cli@v2
-        with:
-          azcliversion: latest
-          inlineScript: |
-            az account show
-
+      - name: Az Context
+        run: |
+          az account show
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
         with:
