--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -90,7 +90,7 @@ jobs:
       - name: Terraform Validate
         run: |
           terraform \
-          -chdir="$${{github.event.inputs.terraform_folder}}" \
+          -chdir="${{github.event.inputs.terraform_folder}}" \
           validate
 
   # plan:
